wip - for 1st release.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,29 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
+    <!-- Unique identifier of the plugin. It should be FQN. It cannot be changed between the plugin versions. -->
     <id>com.github.ok9xnirab.cleanwhitetheme</id>
-    <name>clean-white-theme</name>
-    <vendor>ok9xnirab</vendor>
+    <name>Clean White Theme</name>
+    <vendor url="https://nirab.me">Istiaq Nirab</vendor>
+    <category>UI</category>
 
     <depends>com.intellij.modules.platform</depends>
-
     <resource-bundle>messages.MyBundle</resource-bundle>
 
-    <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.ok9xnirab.cleanwhitetheme.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
-    </extensions>
+    <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
+         Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
+         Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
+    <description><![CDATA[
+    Enter short description for your theme here.<br>
+    <em>most HTML tags may be used</em>
+  ]]></description>
 
-    <applicationListeners>
-        <listener class="com.github.ok9xnirab.cleanwhitetheme.listeners.MyApplicationActivationListener" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
-    </applicationListeners>
+    <!-- Short summary of new features and bugfixes in the latest plugin version.
+         Displayed on the Plugin Page and IDE Plugin Manager. Simple HTML elements can be included between <![CDATA[  ]]> tags. -->
+    <change-notes><![CDATA[
+    Initial release of the theme.
+  ]]></change-notes>
+
+    <extensions defaultExtensionNs="com.intellij">
+        <themeProvider id="clean-white-theme" path="/theme/clean-white.theme.json"/>
+    </extensions>
 </idea-plugin>
